--- a/src/main/webapp/WEB-INF/templates/user/reset.html
+++ b/src/main/webapp/WEB-INF/templates/user/reset.html
@@ -3,39 +3,31 @@
 <meta http-equiv="Content-Type" content="text/html; UTF-8">
 
 <head>
-	<title>密码重置</title>
-	<th:block th:replace="base/lib :: common" />
-	<th:block th:replace="base/lib :: bootstrap" />
-	<th:block th:replace="base/lib :: materialize" />
+<title>密码重置</title>
+<th:block th:replace="base/lib :: common" />
+<th:block th:replace="base/lib :: semantic" />
 </head>
 
 <body th:replace="base/layout/user :: layout(~{::#container})">
-	<div id="container">
-		<div class="col-md-offset-4 col-md-4 form">
-			<div class="panel panel-primary">
-				<div class="panel-heading">
-					<label>重置密码</label>
-				</div>
-				<div class="panel-body">
-					<form class="form-valid" action="resetmail" method="post">
-						<div class="form-group">
-							<input class="form-control" name="username" placeholder="用户名" />
-						</div>
-						<div class="form-group">
-							<input class="form-control" name="email" placeholder="邮箱"
-								jerror="邮箱格式不正确"
-								jpattern="^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$" />
-						</div>
-						<div>
-							<label th:text="${error}"></label>
-						</div>
-						<div class="form-group">
-							<input class="btn btn-primary" type="submit" />
-						</div>
-					</form>
-				</div>
+	<div id="container" class="ui text container justified ">
+		<h4>密码重置申请</h4>
+		<form class="form-valid ui form" th:action="@{/user/reset/pwd/mail}"
+			method="post">
+			<div class="ui field">
+				<label>用户名</label> <input name="username" placeholder="用户名" />
 			</div>
-		</div>
+			<div class="ui field">
+				<label>邮箱</label> <input name="email" placeholder="邮箱"
+					jerror="邮箱格式不正确"
+					jpattern="^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$" />
+			</div>
+			<div>
+				<label th:text="${error}"></label>
+			</div>
+			<div class="ui field">
+				<input class="ui green button" type="submit" />
+			</div>
+		</form>
 	</div>
 </body>
 </html>
