--- a/src/main/webapp/WEB-INF/templates/admin/anime/save.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/save.html
@@ -9,7 +9,7 @@
 
 <th:block th:replace="base/lib :: semantic"></th:block>
 
-<div class="header">Header</div>
+<div class="header">影视新增</div>
 <div class="scrolling content">
 	<div class="ui text container">
 	<form class="ui form" id="saveAnimeForm" action="@{/admin/anime/save}" method="post"
