--- a/src/main/webapp/WEB-INF/templates/base/layout/user.html
+++ b/src/main/webapp/WEB-INF/templates/base/layout/user.html
@@ -20,7 +20,7 @@
 			<div th:replace="${content}"></div>
 		</div>
 	</div>
-	
+	<th:block th:replace="~{base/alert}"></th:block>
 </body>
 
 </html>
