--- a/src/main/webapp/WEB-INF/templates/mail/register.html
+++ b/src/main/webapp/WEB-INF/templates/mail/register.html
@@ -5,7 +5,7 @@
 <div class="ui  text container" style="display: block;font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;line-height: 1.5;font-size: 1.14285714rem;max-width: 700px!important;">
 	<div class="ui green inverted segment" style="position: relative;background: #1B1C1D;box-shadow: none;margin: 1rem 0;padding: 1em;border-radius: .28571429rem;border: none;font-size: 1rem;margin-top: 0;margin-bottom: 0;color: #FFF!important;background-color: #21BA45!important;">
 		<p style="margin: 0 0 1em;line-height: 1.4285em;margin-top: 0;">亲爱的用户，您好！</p>
-		<span>感谢您的注册，以下是您的账号验证链接：</span> <a th:href="@{${url}}" style="var s,l,c,u=k: ;return a=a||d,r=w||r,&quot;string&quot;==typeof t&&u!==i&&(t=t.split(/[\. ]/),s=t.length-1,e.each(t,function(o,a){var r=o!=s?a+t[o+1].charat(0).touppercase()+t[o+1].slice(1): t;if(e.isplainobject(u[r])&&o!=s)u=u[r]: ;else{if(u[r]!==i)return l=u[r],!1: ;if(!e.isplainobject(u[a])||o==s)return u[a]!==i?(l=u[a],!1): (n.error(m.method,t),!1);u=u[a]: ;background: 0 0;color: #4183C4;text-decoration: none;"></a> <span>
+		<span>感谢您的注册，以下是您的账号验证链接：</span> <a th:href="@{${url}}" style="var s,l,c,u=k: ;return a=a||d,r=w||r,&quot;string&quot;==typeof t&&u!==i&&(t=t.split(/[\. ]/),s=t.length-1,e.each(t,function(o,a){var r=o!=s?a+t[o+1].charat(0).touppercase()+t[o+1].slice(1): t;if(e.isplainobject(u[r])&&o!=s)u=u[r]: ;else{if(u[r]!==i)return l=u[r],!1: ;if(!e.isplainobject(u[a])||o==s)return u[a]!==i?(l=u[a],!1): (n.error(m.method,t),!1);u=u[a]: ;background: 0 0;color: #4183C4;text-decoration: none;">点击链接</a> <span>
 			(这是一封自动产生的email，请勿回复。) </span>
 	</div>
 </div>
