修复用户维护BUG
1.修复请求映射路径
2.修复编辑用户信息时，激活状态显示有误

--- a/src/main/webapp/WEB-INF/templates/admin/user/edit.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/edit.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="field">
 			<div class="ui checkbox">
-				<input name="status" type="checkbox" value="1" checked="${user.status == 1} ? 'checked' : ''"/>
+				<input name="status" type="checkbox" value="1" th:checked="${user.status == '1'}"/>
 				<label>激活状态</label>
 			</div>
 		</div>
