--- a/src/main/webapp/WEB-INF/templates/admin/anime/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/index.html
@@ -75,8 +75,11 @@
 				</tr>
 			</tbody>
 		</table>
-		<div id="page" th:data-page="${animeList.getPageNum() }"
-			th:data-total="${animeList.getPages() }" data-url="anime?p="></div>
+		
+		
+		<!-- <div id="page" th:data-page="${animeList.getPageNum() }"
+			th:data-total="${animeList.getPages() }" data-url="anime?p="></div> -->
+			
 		<div class="ui modal"></div>
 	</div>
 </body>
