--- a/src/main/webapp/WEB-INF/templates/admin/dic/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/dic/index.html
@@ -28,7 +28,9 @@
 </head>
 
 <body th:replace="base/layout/admin :: layout(~{::#container})">
-	<div id="container" class="ui grid" style="height: 500px">
+	<div id="container">
+		<p></p>
+		<div class="ui grid">
 		<div class="ui vertical menu three wide column"
 			style="overflow-y: scroll">
 
@@ -95,6 +97,7 @@
 		</div>
 		<div class="actions">
 			<div class="ui approve green button">Approve</div>
+		</div>
 		</div>
 	</div>
 	
