--- a/src/main/webapp/WEB-INF/templates/base/nav_admin.html
+++ b/src/main/webapp/WEB-INF/templates/base/nav_admin.html
@@ -24,7 +24,7 @@
 					<a  class="item" th:classappend="${module == 'anime' ? 'active' : ''}"
 						th:href="@{/admin/anime}">番剧管理</a>
 					<a  class="item" th:classappend="${module == 'dic' ? 'active' : ''}"
-						th:href="@{/admin/anime}">字典管理</a>
+						th:href="@{/admin/dic}">字典管理</a>
 				</div>
 			</div>
 		</div>
