--- a/src/main/webapp/WEB-INF/templates/admin/anime/edit.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/edit.html
@@ -5,8 +5,7 @@
 <div class="header">影视编辑</div>
 <div class="scrolling content">
 	<div class="ui text container">
-		<form class="ui form" action="anime/update"
-			id="editAnimeForm" method="post" enctype="multipart/form-data">
+		<form class="ui form" action="anime/update" id="editAnimeForm" method="post">
 			<input name="id" type="hidden" th:value="${anime.id }"/>
 			
 			<div class="field">
@@ -18,9 +17,10 @@
 				<label>别名</label>
 				<input type="text" name="alias" placeholder="请输入番剧别名" th:value="${anime.alias }" />
 			</div>
+			
 			<div class="field">
 				<label>上传图片</label>
-				<input type="file" name="picFile" />
+				<input type="text" name="pic" />
 			</div>
 
 			<div class="field">
@@ -44,8 +44,14 @@
 				<input type="date" name="publishMonth"
 					th:value="${#dates.format(anime.publishMonth, 'yyyy-MM-dd')}"/>
 			</div>
-			<input class="ui green button" type="submit" value="保存" />
-			<button class="ui button">取消</button>
+			
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+
+			<div class="actions">
+				<input type="submit"  class="ui green button" value="保存"/>
+				<a type="button" class="ui cancel button" data-dismiss="modal">关闭</a>
+			</div>
+			
 		</form>
 	</div>
 </div>
