--- a/src/main/webapp/WEB-INF/templates/admin/anime/save.html
+++ b/src/main/webapp/WEB-INF/templates/admin/anime/save.html
@@ -12,8 +12,7 @@
 <div class="header">影视新增</div>
 <div class="scrolling content">
 	<div class="ui text container">
-	<form class="ui form" id="saveAnimeForm" action="@{/admin/anime/save}" method="post"
-		enctype="multipart/form-data">
+	<form class="ui form" id="saveAnimeForm" th:action="@{/admin/anime/save}" method="post">
 		<div class="field">
 			<label>名称</label>
 			<input type="text" name="name" placeholder="请输入番剧名称"></input>
@@ -24,9 +23,14 @@
 			<input type="text" name="alias" placeholder="请输入番剧别名"></input>
 		</div>
 
-		<div class="field">
+<!-- 		<div class="field">
 			<label>上传图片</label>
 			<input type="file" name="picFile">
+		</div> -->
+		
+		<div class="field">
+			<label>图片地址</label>
+			<input type="text" name="pic" />
 		</div>
 
 		<div class="field">
@@ -47,6 +51,9 @@
 			<label>发布日期</label>
 			<input type="date" name="publishMonth"></input>
 		</div>
+		
+		<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+				
 		<input class="ui green button" type="submit" value="保存" />
 		<button class="ui button" value="取消"></button>
 	</form>
