--- a/src/main/webapp/WEB-INF/templates/admin/user/save.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/save.html
@@ -32,7 +32,7 @@
 		<div class="ui divider"></div>
 		<div class="actions">
 			<input type="submit"  class="ui green button" value="保存"/>
-			<button type="button" class="ui cancel button" data-dismiss="modal">关闭</button>
+			<a type="button" class="ui cancel button" data-dismiss="modal">关闭</a>
 		</div>
 	</form>
 </div>
