--- a/src/main/webapp/WEB-INF/templates/base/lib.html
+++ b/src/main/webapp/WEB-INF/templates/base/lib.html
@@ -28,6 +28,7 @@
 <th:block th:fragment="semantic">
 	<script type="text/javascript" th:src="@{/semantic/semantic.js}"></script>
 	<script type="text/javascript" th:src="@{/js/semantic-custom.js}"></script>
+	<script type="text/javascript" th:src="@{/js/semantic-validate.js}"></script>
 	<link rel="stylesheet" th:href="@{/semantic/semantic.css}" ></link>
 </th:block>
 
