--- a/src/main/webapp/WEB-INF/templates/admin/scratch/temp.html
+++ b/src/main/webapp/WEB-INF/templates/admin/scratch/temp.html
@@ -36,8 +36,9 @@
 		<div class="ui bottom attached active tab segment">
 			<table class="ui celled padded table">
 				<colgroup>
-					<col style="width: 20%">
-					<col style="width: 7%">
+					<col style="width: 3%">
+					<col style="width: 15%">
+					<col style="width: 12%">
 					<col style="width: 7%">
 					<col style="width: 30%">
 					<col style="width: 15%">
@@ -45,6 +46,7 @@
 				</colgroup>
 				<thead>
 					<tr>
+						<th><button class="ui blue icon button mini"><i class="checkmark box icon"></i></button></th>
 						<th>名称</th>
 						<th>集号</th>
 						<th>来源</th>
@@ -55,6 +57,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="episode : ${episodeScratchs}">
+						<td><input type="checkbox" /></td>
 						<td th:text="${episode.anime.name}"></td>
 						<td th:text="${episode.number}"></td>
 						<td th:text="${hostMap.get(#strings.toString(episode.hostId))}"></td>
